[package]
name = "redis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
dotenv = "0.15.0"
env_logger = "0.10.1"
hyper = { version = "1.0.1", features = ["full"] }
log = "0.4.20"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
